# fast-api-project

./: .env.example  .gitignore  README.md  makefile  pyproject.toml
app/: main.py
app/api/v1/: user.py
app/core/: config.py
app/db/: schema.py
app/services/: user_service.py  user_service_interface.py
tests/: README.md  test_db.py
tests/api/v1/: test_user.py
tests/integration/api/v1/: test_integration_user.py
tests/integration/services/: test_real_user_service.py  user_service_contract.py
tests/unit/api/v1/: test_unit_user.py
tests/unit/services/: fake_user_service.py  test_fake_user_service.py
